css/style.css
* {
  box-sizing: border-box;
}

:root {
  --light-blue: #DEEBFF;
  --blue: #0065FC;
  --gray: #F2F2F2;
}

body {
  font-family: 'Raleway', sans-serif;
  color: black;
  margin: 0;
}


.main-container {
  max-width: 1440px;
  margin: 0px 50px;
}

a {
  color: black;
  text-decoration: none;
}

header {
  margin-top: 20px;
  margin-bottom: 80px;
  width: 100%;
}

nav {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.logo {
  width: 62px;
  height: 20px;
}

.nav-link {
  display: flex;
  list-style-type: none;
  padding: 0;
  margin: 0;
  gap: 68px;
}

/* .nav-link a {
  transition: all 0.3s ease;
} */

.nav-link a:hover {
  color: var(--blue);
  cursor: pointer;
  border-top: 1px solid var(--blue);
  padding-top: 19px;
}

.intro {
  margin-bottom: 35px;
}

.intro-title {
  margin: 0;
  padding: 0;
  padding-bottom: 8px;
}

.intro p {
  margin: 0;
  padding: 0;
}

.search-bar {
  display: flex;
  margin-bottom: 35px;
}

.map {
  background-color: var(--gray);
  border: none;
  border-top-left-radius: 20px; /* Arrondi du coin supérieur gauche */
  border-bottom-left-radius: 20px; /* Arrondi du coin inférieur gauche */
  align-items: center;
  text-align: center;
  padding: 10px 20px;
}

.input-location {
  border: 1px solid var(--gray);
  padding: 10px 20px;
  position: relative;
  font-weight: bold;
}

.search {
  background-color: var(--blue);
  color: white;
  cursor: pointer;
  padding: 10px 20px;
  border: var(--gray);
  border-top-right-radius: 20px; /* Arrondi du coin supérieur droit */
  border-bottom-right-radius: 20px; /* Arrondi du coin inférieur droit */
  position: absolute;
}

.glass {
  background-color: var(--blue);
  color: white;
  cursor: pointer;
  padding: 15px 16px;
  border: var(--gray);
  border-radius: 15px;
  position: absolute;
  display: none;
}

.filter {
  display: flex;
  gap: 15px;
  margin-bottom: 35px;
}

.filter-container {
  display: flex;
  gap: 15px;
}

.filter-container div {
  font-weight: bold;
  background-color: transparent;
  transition: background-color 0.3s ease;
  border: 2px solid var(--gray);
  border-radius: 25px;
  align-items: center;
  justify-content: center;
  padding: 10px 20px;
}

.filter-container div:hover {
  background-color: var(--light-blue);
  cursor: pointer;
}

.filter i {
  color: var(--blue);
  padding-top: 5px;
  padding-right: 5px;
}

.info-bulle {
  display: flex;
  gap: 10px;
  align-items: center;
  margin-bottom: 35px;
}

.info-bulle i {
  display: inline-flex;
  color: var(--blue);
  background-color: transparent;
  border: 2px solid var(--gray);
  width: 20px;
  height: 20px;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  font-size: 12px;
  margin-right: 6px;
}

.section-hebergement {
  display: flex;
  gap: 40px;
  margin-bottom: 70px;
}

.hebergement {
  background-color: var(--gray);
  padding: 30px;
  border-radius: 15px;
  width: 900px;
}

.hebergement > h2 {
  margin: 0;
  margin-bottom: 30px;
}

.hosting-cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  row-gap: 30px;
  column-gap: 30px;
  width: 100%;
  font-size: .8rem;
  margin-bottom: 32px;
}

.hosting-card {
  height: 200px;
  border-radius: 15px;
  overflow: hidden;
  background: white;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  padding: 5px;
}

.hosting-card > img {
  height: 100px;
  width: 100%;
  object-fit: cover;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
}

.text-card {
  padding: 0 10px;
}

.text-card h3, .text-famous-card h3 {
  margin-bottom: 8px;
}

.text-card p, .text-famous-card p {
  margin-top: 8px;
}

.text-card i {
  color: var(--blue);
}

.text-card i:last-child {
  color: var(--gray);
}

.text-hebergement {
  font-weight: bold;
}

.famous {
  flex: 1;
  background-color: var(--gray);
  padding: 30px;
  border-radius: 15px;
}

.famous-intro {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin-bottom: 30px;
}

.famous-intro .fa-chart-line {
  color: var(--blue);
  margin-top: 5px;
}

.famous i {
  color: var(--blue);
}

.famous .fa-star:last-child {
  color: var(--gray);
}

.famous-intro h2, .famous-intro i {
  margin: 0;
}

.famous-cards {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 30px;
  width: 100%;
  font-size: .8rem;
}

.famous-card {
  display: flex;
  height: 140px;
  border-radius: 15px;
  overflow: hidden;
  background: white;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  padding: 5px;
}

.famous-card > img {
  width: 120px;
  height: 100%;
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
  margin-right: 8px;
  object-fit: cover;
}

.text-famous-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.text-famous-card h3, .text-famous-card p, .text-famous-card .stars {
  padding: 0 8px;
}

.text-famous-card .stars {
  margin-bottom: 3px;
}

.section-activite {
  margin: 0 30px;
  margin-bottom: 70px;
}

.section-activite > h2 {
  margin-bottom: 30px;
}

.activite-cards {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 30px;
  font-size: .8rem;
  width: 100%;
}

.activite-card {
  overflow: hidden;
  background: white;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  border-radius: 15px;
}

.activite-card img {
  width: 100%;
  height: 400px;
  object-fit: cover;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
}

.activite-card h3 {
  padding: 0 20px;
}

footer {
  display: flex;
  gap: 300px;
  background-color: var(--gray);
  border-radius: 5px;
  padding: 0 20px;
  padding-bottom: 10px;
}

@media screen and (min-width: 1441px) {
  .main-container {
    margin: auto;
  }
}

@media screen and (min-width: 768px) and (max-width: 1024px) {
  .section-hebergement {
    display: flex;
    flex-direction: column;
    gap: 50px;
  }

  .hebergement {
    width: 100%;
  }

  .famous {
    flex: none;
    width: 100%;
    padding: 30px;
  }

  .famous-cards {
    display: flex;
    flex-direction: row;
    gap: 20px;
    font-size: .8rem;
  }

  .famous-card {
    flex: 1;
  }

  .activite-card img {
    height: 200px;
  }

  footer {
    width: 100%;
    gap: 100px;
  }
}

@media screen and (max-width: 767px) {
  .main-container {
    margin: 0;
  }

  header, nav {
    width: 100%;
  }

  header {
    margin-top: 0;
    margin-bottom: 30px;
  }

  nav {
    flex-direction: column;
  }

  .logo {
    margin: 30px auto;
  }

  .nav-link {
    justify-content: center;
    padding-bottom: 15px;
    gap: 100px;
    border-bottom: 1px solid var(--light-blue);
    width: 100%;
  }

  .nav-link a:hover {
    padding-bottom: 15px;
    border-bottom: 1px solid var(--blue);
    color: var(--blue);
    border-top: none;
  }

  .nav-link a {
    text-align: center;
  }

  .intro {
    margin-bottom: 25px;
  }

  .section-intro {
    justify-content: center;
    margin: 0 20px;
  }

  .glass {
    display: inline-block;
    margin-left: -10px;
    margin-top: -4px;
  }

  .search-bar {
    margin-bottom: 10px;
  }

  .search {
    display: none;
  }

  .filter {
    flex-direction: column;
    margin-bottom: 10px;
    gap: 2px;
  }

  .filter-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 10px;
    font-size: .9rem;
  }

  .info-bulle {
    margin-bottom: 10px;
  }

  .section-hebergement {
    display: flex;
    flex-direction: column-reverse;
    gap: 0;
    margin-bottom: 25px;
  }

  .hebergement {
    width: 100%;
    border-radius: 0;
    background-color: white;
  }

  .hosting-cards {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-bottom: 5px;
  }

  .hosting-card {
    height: 200px;
  }

  .famous {
    width: 100%;
    border-radius: 0;
  }

  .activite-cards {
    display: flex;
    flex-direction: column;
    gap: 15px;
    width: 100%;
  }

  .activite-card {
    overflow: hidden;
    background: white;
    box-shadow: 0 0 15px rgba(0,0,0,0.2);
    border-radius: 15px;
    height: 200px;
    width: 100%;
  }

  .activite-card img{
    height: 150px;
  }

  footer {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 20px;
    background-color: var(--gray);
    border-radius: 0;
    padding: 0 30px;
    margin: 0;
  }
}

